refacto lisibilité + genetic v2